# hexagonal-architecture

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
adapters/driven/auth/: bcrypt_password_hasher.py  jwt_token_service.py
adapters/driven/notifications/: in_memory_email_notifier.py  smtp_email_notifier.py
adapters/driven/persistence/: customer_repository.py  models.py  order_repository.py  user_repository.py  vendor_repository.py
adapters/driving/api/: dependencies.py
alembic/: env.py
alembic/versions/: b60986afc396_initial_migration.py
bruno/: bruno.json
bruno/auth/: login.bru  register.bru
bruno/customers/: create.bru  list.bru
bruno/environments/: local.bru
bruno/orders/: cancel.bru  create.bru  list.bru  transition.bru
bruno/vendors/: create.bru  list.bru
domain/: exceptions.py
domain/entities/: customer.py  order.py  user.py  vendor.py
domain/ports/: customer_repository.py  email_notifier.py  order_repository.py  password_hasher.py  token_service.py  user_repository.py  vendor_repository.py
domain/use_cases/auth/: login.py  register.py
domain/use_cases/customers/: create_customer.py  list_customers.py
domain/use_cases/orders/: cancel_order.py  create_order.py  (+2 more)
infrastructure/: config.py  database.py  dependencies.py
tests/: conftest.py
tests/integration/: _helpers.py  test_auth_flow.py  test_customers_flow.py  test_orders_errors.py  test_orders_flow.py
tests/unit/: test_create_order_use_case.py  test_login_use_case.py  test_register_use_case.py  test_transition_order_status_use_case.py
(+16 files in other folders)
